--- a/static/index.html
+++ b/static/index.html
@@ -1,37 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Runner V2 - AI OS</title>
+    <title>Runner V2</title>
     <style>
-        body { font-family: Arial; margin: 0; padding: 20px; background: #1a1a1a; color: #fff; }
-        .container { max-width: 1200px; margin: 0 auto; }
+        body { background: #1a1a2e; color: white; font-family: Arial; padding: 20px; }
         h1 { color: #4CAF50; }
-        .agents { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; }
-        .agent-card { background: #2a2a2a; padding: 15px; border-radius: 8px; }
-        .status { color: #4CAF50; }
+        .agents { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; }
+        .agent { background: #2a2a3e; padding: 15px; border-radius: 8px; }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>🚀 Runner Platform V2</h1>
-        <p>AI Operating System - 7 Agents Working Together</p>
-        <div class="agents">
-            <div class="agent-card">
-                <h3>Abacus</h3>
-                <p>Code Architect</p>
-                <span class="status">✅ Active</span>
-            </div>
-            <div class="agent-card">
-                <h3>GitBot</h3>
-                <p>Version Control</p>
-                <span class="status">✅ Active</span>
-            </div>
-            <div class="agent-card">
-                <h3>ScriptRunner</h3>
-                <p>Execution Engine</p>
-                <span class="status">✅ Active</span>
-            </div>
-        </div>
+    <h1>Runner Platform V2</h1>
+    <p>AI Operating System - 7 Agents</p>
+    <div class="agents">
+        <div class="agent">Abacus - Code</div>
+        <div class="agent">GitBot - Git</div>
+        <div class="agent">ScriptRunner - Execute</div>
+        <div class="agent">Memory - Store</div>
+        <div class="agent">Emergent - Manage</div>
+        <div class="agent">Cursor - UI</div>
+        <div class="agent">Orchestrator - Conduct</div>
     </div>
 </body>
 </html>
